--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -102,6 +102,10 @@
 			</div>
 		</div>
 	</div>
-
+<script type="text/javascript">
+window.onload = function() {
+    console.log("Bạn đã vào trang payment thành công!");
+}
+</script>
 </body>
 </html>
