--- a/WebTour/src/main/resources/templates/login.html
+++ b/WebTour/src/main/resources/templates/login.html
@@ -5,15 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Box Design</title>
     <link rel="stylesheet" href="/css/loginStyle.css">
+
+</script>
 </head>
 <body>
-    <div class="container">
-        <div class="box yellow"></div>
-        <div class="box purple"></div>
-        <div class="box purple"></div>
-        <div class="box purple"></div>
-        <div class="box purple"></div>
-        <div class="box purple"></div>
-    </div>
+	<div class="container" id="container">
+		<div class="form-container sign-up-container">
+			<form action="#">
+				<h1>Create Account</h1>
+				<input id="full-name-register" type="text" placeholder="Full name" required/>
+				<input id="email-register" type="email" placeholder="Email" required/>
+				<input id="user-namme-register" type="text" placeholder="User name" required/>
+				<input id="phone-register" type="tel" placeholder="Phone" pattern="^0[0-9]{6,12}" required/>
+				<input id="password-register" type="password" placeholder="Password" required/>
+				<button onClick="handleRegisterAccont()">Sign Up</button>
+			</form>
+		</div>
+		<div class="form-container sign-in-container">
+			<form action="#">
+				<h1>Sign in</h1>
+				<input id="user-name-login" type="text" placeholder="User name" required/>
+				<input id="password-login" type="password" placeholder="Password" required/>
+				<a href="#">Forgot your password?</a>
+				<button onClick="handleLogin()">Sign In</button>
+			</form>
+		</div>
+		<div class="overlay-container">
+			<div class="overlay">
+				<div class="overlay-panel overlay-left">
+					<h1>Welcome Back!</h1>
+					<p>To keep connected with us please login with your personal info</p>
+					<button class="ghost" id="signIn">Sign In</button>
+				</div>
+				<div class="overlay-panel overlay-right">
+					<h1>Hello, Friend!</h1>
+					<p>Enter your personal details and start journey with us</p>
+					<button class="ghost" id="signUp">Sign Up</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="../js/loginScript.js"></script>
 </body>
 </html>
