--- a/WebTour/bin/src/main/resources/templates/components/header.html
+++ b/WebTour/bin/src/main/resources/templates/components/header.html
@@ -50,7 +50,7 @@
                 </ul>
             </nav>            
             <div class="icons">
-                <!-- <a href="#"><i class="fas fa-search"></i></a> -->
+                <a href="#"><i class="fas fa-search"></i></a>
                 <a href="#"><i class="fa-regular fa-circle-user"></i></a>
                 <a href="#"><i class="fas fa-shopping-cart"></i></a>
                 <span class="hotline">
